[workspace]

members = [
    "d01a",
    "d01b",
    "d02a",
    "d02b",
    "d03a",
    "d03b",
    "d04a",
    "d04b",
    "d05a",
    "d05b",
    "d06a",
    "d06b",
    "d07a",
    "d07b",
    "d08a",
    "d08b",
    "d09a",
    "d09b",
    "d10a",
    "d10b",
    "d11a",
    "d11b",
    "d12a",
    "d12b",
]