[workspace]

members = [
    "d01a",
    "d01b",
    "d02a",
    "d02b",
    "d03a",
    "d03b",
    "d04a",
    "d04b",
    "d05a",
    "d05b",
    "d06a",
    "d06b",
    "d07a",
    "d07b",
    "d08a",
    "d08b",
    "d09a",
    "d09b",
    "d10a",
    "d10b",
    "d11a",
    "d11b",
    "d12a",
    "d12b",
    "d13a",
    "d13b",
    "d14a",
    "d14b",
    "d15a",
    "d15b",
    "d16a",
    "d16b",
    "d17a",
    "d17b",
    "d18a",
    "d18b",
]