[package]
name = "advent_of_code_2022_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
itertools = "0.10.5"
regex = "1.7.0"
num = "0.4.0"

[profile.test]
opt-level = 3
lto = true

[profile.release]
opt-level = 3
lto = true